...
                    ContentUnavailableView(
                        "No notebooks to restore",
                        systemImage: "checkmark.icloud"
                    )
                }
            }
            .navigationTitle("Restore from Notion")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .cancellationAction) {
                    Button("Cancel", action: dismiss.callAsFunction)
                }
                ToolbarItem(placement: .confirmationAction) {
...
